Fix dropdown menu too long (#112)
Separate dropdown styles for Mega-Menu and regular dropdown menus

--- a/src/Orckestra.Grocery.Website/UI.Package/Sass/Custom/_main-nav.scss
+++ b/src/Orckestra.Grocery.Website/UI.Package/Sass/Custom/_main-nav.scss
@@ -289,9 +289,13 @@
             .dropdown:hover {
                 >.dropdown-menu {
                     display: block;
-                    min-height: 280px;
-                    max-height: 73vh;
-                    overflow-y: auto;
+                }
+                &.main-nav-fw {
+                    >.dropdown-menu {
+                        min-height: 280px;
+                        max-height: 73vh;
+                        overflow-y: auto;
+                    }
                 }
             }
             .dropdown-menu,
